fixed heading alignment issue

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -459,6 +459,7 @@ div.meta{
 	h1{
 		font-size: 16px;
 		text-align: center;
+		max-width: 100%;
 	}
 	h2,h3,h4,h5,h6 {
 		font-size: 14px;
